# mat627

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  codex_task_brief.md  pyproject.toml
.codex/: config.toml
data/ch2_1/: exact.npy  horners.npy  standard.npy
data/ch2_2/: exp_x__backward__abs_err.npy  exp_x__backward__approx.npy  exp_x__backward__order.npy  exp_x__center__abs_err.npy  exp_x__center__approx.npy  exp_x__center__err.npy  exp_x__center__h.npy  exp_x__center__order.npy  exp_x__exact.npy  exp_x__forward__abs_err.npy  exp_x__forward__approx.npy  exp_x__forward__err.npy  exp_x__forward__order.npy  exp_x__special__abs_err.npy  exp_x__special__approx.npy  exp_x__special__order.npy  sqrt_x_1__backward__abs_err.npy  sqrt_x_1__backward__approx.npy  sqrt_x_1__backward__err.npy  sqrt_x_1__backward__order.npy  sqrt_x_1__center__abs_err.npy  sqrt_x_1__center__approx.npy  sqrt_x_1__center__err.npy  sqrt_x_1__center__order.npy  sqrt_x_1__exact.npy  sqrt_x_1__forward__approx.npy  sqrt_x_1__forward__err.npy  sqrt_x_1__forward__order.npy  sqrt_x_1__special__abs_err.npy  sqrt_x_1__special__approx.npy  sqrt_x_1__special__order.npy
data/ch2_3/: euler__approx.npy  euler__err.npy  euler__h.npy  euler__rate.npy  extrapolated__approx.npy  extrapolated__err.npy  extrapolated__h.npy  extrapolated__rate.npy  part1__approx.npy  part1__err.npy  part1__exact.npy  part1__t.npy  plot__exact_t.npy  plot__exact_y.npy  rk4__approx.npy  rk4__err.npy  rk4__rate.npy
src/: ch1.rs  ch2_1.rs  ch2_2.rs  ch2_3.rs  ch2_4.rs  ch2_5.rs  ch2_6.rs  ch2_7.rs  main.rs  util.rs
(+117 files in other folders)
